Switch from List.of() to Collections.emptyList()